fixed width of user input fields to remove horizontal scroll bar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,11 @@
     margin-left: 0px;
 }
 
+#userForms{
+    margin-left:0px;
+    margin-right: 0px;
+}
+
 
 
 
